[gd_scene load_steps=2 format=2]

[ext_resource path="res://games/decks/MouseArea.gd" type="Script" id=1]

[node name="MouseArea" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoldTimer" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="." to="." method="_on_MouseArea_button_down"]
[connection signal="button_up" from="." to="." method="_on_MouseArea_button_up"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_HoldTimer_timeout"]
